# jack-compiler-rust

./: Cargo.toml  README.md
assets/: JackAnalyzer.py  JackCompiler.py  Main  VMTranslator.py
src/: code_writer.rs  compiler.rs  lib.rs  logger.rs  main.rs  parser.rs  symbol_table.rs  token.rs  token_descriptor.rs
src/common/: mod.rs
src/operation/: mod.rs  tree.rs
src/parser/: hack.rs  jack.rs  mod.rs
src/vm/: commands.rs  mod.rs  segment_type.rs  vm_translator.rs  vm_writer.rs
src/xml/: mod.rs  operation_xml_generator.rs  token_xml_generator.rs
